chargement données ex1data1.txt

--- a/sandbox/ex1.Rmd
+++ b/sandbox/ex1.Rmd
@@ -23,3 +23,13 @@ class(A)
 
 
 ## linear regression with one variable
+
+chargement des données du fichier ex1data1.txt
+
+```{r}
+url <- "ex1data1.txt"
+# fichier de 2 colonnes séparé par une virgule , séparateur décimaux = . (point)
+problem.data <- read.table(url,header = FALSE,sep = ",",dec = ".")
+head(problem.data)
+```
+
